# fbx_sdk_wrapper

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.bat
assets/: cube.fbx
src/: AttribMesh.cpp  AttribMesh.h  Constants.h  Exporter.cpp  Exporter.h  Loader.cpp  Loader.h  Types.h
test/: main.cpp
